--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,12 @@
 
     <string name="action_settings">Settings</string>
 
+    <string name="menu_title">Menu</string>
+    <string name="menu_register_login">Login / Register</string>
+    <string name="menu_tools">Tools</string>
+    <string name="menu_report">Report</string>
+    <string name="menu_contact_doctor">Contact Doctor</string>
+    <string name="menu_about">About</string>
 
     <string name="weekly_report">Weekly Report</string>
     <string name="monthly_report">Monthly Report</string>
